# liquidations

./: .env.enc  .env.example  .env.template  .gitignore  .mcp.fullbrowser.json  .mcp.json  .pre-commit-config.yaml  .tddguard.json  ARCHITECTURE.md  BUG_REPORT_2025-12-03.md  CLAUDE.md  CLEANUP_SUMMARY.md  COMPREHENSIVE_TEST_SUMMARY.md  CRITICAL_BUGS_FOUND.md  DEEP_ANALYSIS_REPORT.md  EDGE_CASE_TEST_REPORT.md  FEATURE_003_COMPLETE.md  FINAL_STATUS_14NOV2025.txt  FINDINGS.md  LOCK_PROTECTION.md  POLISH_TASKS_COMPLETE.md  README.md  SESSION_FINAL_REPORT.md  SESSION_REPORT_13NOV2025.md  SETUP_COMPLETE.md  TESTING_STATUS.md  VALIDATION_FIXES_REPORT.md  VERIFICATION_REPORT.md  VISUAL_VERIFICATION.md  VISUAL_VERIFICATION_REPORT.md  catalog-info.yaml  ingest_full_history_n8n.py  ingest_full_history_n8n.py.backup_20251102_180552  ingest_full_history_n8n.py.backup_20251102_223823  ingest_full_history_safe.py  mkdocs.yml  pyproject.toml  tasks.md
.claude/: SKILLS_MANIFEST.md  config.json  settings.local copy.json
.playwright-mcp/: test_runner.js
.serena/: project.yml
.specify/: PLAN_COMPLETE.md  TASKS_COMPLETE.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
config/: alert_settings.yaml  bias_settings.yaml  validation_thresholds.yaml
docs/: ARCHITECTURE.md  DATA_VALIDATION.md  EXCHANGE_COMPARISON.md  EXCHANGE_INTEGRATION.md  PRODUCTION_CHECKLIST.md  api_guide.md  index.md  mathematical_foundation.md  model_accuracy.md  troubleshooting.md
examples/: CODE_ANALYSIS.md  README.md  binance_liquidation_formula_reference.txt  liquidations_chart_plot.py  matplotlib_chart_reference.txt  py_liquidation_map_README.md  py_liquidation_map_logic_analysis.md  py_liquidation_map_mapping.py
frontend/: coinglass_heatmap.html  compare.html  heatmap.html  historical_data.json  historical_liquidations.html  liquidation_map.html  styles.css  validation_dashboard.html
reports/: backtest_2024.json  backtest_2024.md  screenshot_validation_2025.md  spot_check_results.md
scripts/: backtest_models.py  calculate_liquidations.py  check_ingestion_ready.py  cleanup_duckdb_locks.py  cleanup_stuck_processes.sh  collect_liquidations.py  create_volume_profile_cache.py  daily_ingestion.py  fix_validation_run.py  generate_heatmap_cache.py  generate_ingestion_report.py  ingest_aggtrades.py  ingest_date_range.py  ingest_historical.py  (+24 more)
(+635 files in other folders)
